--- a/index.html
+++ b/index.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document1</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+   <header>
+    <section>
+        <aside>
+            <h1>RETRO CARS</h1>
+            <img id="img1" src="./pictures/download.png" alt="classiccarlogo">
+        </aside>
+        <aside id="as1">
+            <nav>
+                <ul id="ul1">
+                    <li>Home Page</li>
+                    <li>American Classic</li>
+                    <li>European Classic</li>
+                </ul>
+            </nav>
+        </aside>
+        <aside id="as2">
+            <nav>
+                <ul>
+                    <li>About Us</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </aside>
+    </section>
+   </header>
+   <main>
+    <img id="car1" src="./pictures/1948-talbot-lago-t26-grand-sport-4.jpg" alt="car1">
+    <img id="car2" src="./pictures/Aston-Martin-DB5.jpg" alt="car2">
+    <img id="car3" src="./pictures/meritt-thomas-SWt1dHle1eA-unsplash-1024x683.jpg" alt="car3">
+    <img id="car4" src="./pictures/pexels-pixabay-210156.jpg" alt="car4">
+   </main>
+   <p id="p1">1948 Talbot-Lago T26</p>
+   <p id="p2">1964 Aston Martin DB5</p>
+   <p id="p3">1970 Chevrolet Chevelle SS</p>
+   <p id="p4">1960 Chevrolet Impala</p>
+   <button id="b1">15.000$</button>
+   <button id="b2">23.500$</button>
+   <button id="b3">36.000$</button>
+   <button id="b4">28.000$</button>
 </body>
 </html>
